add modify user info back-end
